deferring fix for wallpaper circles showing out of bounds in ios. removed unecessary css.

--- a/src/components/AnimatedWallpaper/styles/AnimatedWallpaper.scss
+++ b/src/components/AnimatedWallpaper/styles/AnimatedWallpaper.scss
@@ -1,8 +1,5 @@
 .wallpaper {
     position: fixed;
-    width: 100%;
-    height: 100%;
-    clip: rect(auto, auto, auto, auto);
 
     .wallpaper-circle {
         border-radius: 50%;
